<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:id="@+id/restaurantDetailsFragment">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"  
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_android"
        android:contentDescription="@string/restaurant_logo"
        android:id="@+id/res_logo"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="24sp"
        android:text="@string/title"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/res_logo"
        android:id="@+id/res_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/cuisine"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/res_name"
        android:id="@+id/res_des"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/tags"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/res_des"
        android:id="@+id/res_tags"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/ratings"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/res_tags"
        android:id="@+id/res_ratings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/address"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/res_ratings"
        android:id="@+id/res_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/phone_number"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/res_address"
        android:id="@+id/res_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

</RelativeLayout>