<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_layout"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:id="@+id/restaurant_logo"
        android:src="@drawable/ic_android"
        android:contentDescription="@string/restaurant_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/restaurant_logo"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:id="@+id/restaurant_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_name"
        android:layout_toEndOf="@id/restaurant_logo"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:textColor="@color/colorGrey"
        android:text="@string/cuisine"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/restaurant_cuisine"/>

    <TextView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/restaurant_cuisine"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        android:textSize="12sp"
        android:textColor="@color/colorGrey"
        android:gravity="end"
        android:id="@+id/restaurant_status"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>